--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>DRMランチパッケージ</h1>
+            <h1>DRMランチパッケージ<br>スターターパッケージ（モニター参加費）</h1>
             <p>お申し込みフォーム</p>
         </div>
     </header>
@@ -276,7 +276,7 @@
     <div class="container">
         <!-- Product Summary -->
         <div class="product-summary">
-            <h2>DRMランチパッケージ</h2>
+            <h2>DRMランチパッケージ<br>スターターパッケージ（モニター参加費）</h2>
             <p style="text-align: center; margin: 15px 0;">AI × UTAGE × プロの職人芸で、<br>お前の時間を買い戻せ。</p>
             <div class="price">¥39,800</div>
             <p class="price-note">（税込・銀行振込一括払い）</p>
@@ -341,7 +341,7 @@
                     <li>このフォームを送信すると、ご入力いただいたメールアドレス宛に<strong>振込口座情報</strong>が届きます。</li>
                     <li>記載された口座にお振込みいただくことで、正式に申し込みが完了します。</li>
                     <li>入金確認後、<strong>ヒアリングシート</strong>をお送りいたします。</li>
-                    <li>ご不明点がございましたら、info@sakimura.info までお問い合わせください。</li>
+                    <li>ご不明点がございましたら、<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="1b72757d745b687a7072766e697a3572757d74">[email&#160;protected]</a> までお問い合わせください。</li>
                 </ul>
             </div>
         </div>
@@ -357,7 +357,7 @@
         </div>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // フォームバリデーション
         document.getElementById('applicationForm').addEventListener('submit', function(e) {
             const name = document.getElementById('name').value.trim();
@@ -395,13 +395,4 @@
         inputs.forEach(input => {
             input.addEventListener('focus', function() {
                 this.parentElement.style.transform = 'translateY(-2px)';
-                this.parentElement.style.transition = 'transform 0.2s ease';
-            });
-            
-            input.addEventListener('blur', function() {
-                this.parentElement.style.transform = 'translateY(0)';
-            });
-        });
-    </script>
-</body>
-</html>
+                this.parentElement.style.transition = 'trans
