--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <li>このフォームを送信すると、ご入力いただいたメールアドレス宛に<strong>振込口座情報</strong>が届きます。</li>
                     <li>記載された口座にお振込みいただくことで、正式に申し込みが完了します。</li>
                     <li>入金確認後、<strong>ヒアリングシート</strong>をお送りいたします。</li>
-                    <li>ご不明点がございましたら、<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="1b72757d745b687a7072766e697a3572757d74">info@sakimura.info</a> までお問い合わせください。</li>
+                    <li>ご不明点がございましたら、<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="1b72757d745b687a7072766e697a3572757d74">[email&#160;protected]</a> までお問い合わせください。</li>
                 </ul>
             </div>
         </div>
